// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div
  className="expense-summary"
>
  <div>
    <h2>
      Viewing 
      <strong>
        1
      </strong>
       
      <strong>
        expense
      </strong>
       totalling 
      <strong>
        $2.35
      </strong>
    </h2>
    <p>
      <Link
        className="btn-expense"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </p>
  </div>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div
  className="expense-summary"
>
  <div>
    <h2>
      Viewing 
      <strong>
        23
      </strong>
       
      <strong>
        expenses
      </strong>
       totalling 
      <strong>
        $235,123,409.87
      </strong>
    </h2>
    <p>
      <Link
        className="btn-expense"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </p>
  </div>
</div>
`;
